--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         <section id="oversikt" class="tab-content">
             <div class="content-header">
                 <h1>Velkommen til 8C</h1>
-                <p class="subtitle">Her finner du ukeplaner og prøveoversikt for skoleåret 25/26.</p>
+                <p class="subtitle">Ukeplaner og informasjon for skoleåret 25/26.</p>
             </div>
             
             <div class="action-card">
                 <div class="calendar-icon"><div class="cal-top"></div><div class="cal-body">8C</div></div>
                 <div class="card-content">
                     <h2>Uke- og Prøveplan</h2>
-                    <p>Klikk under for å åpne fellesområdet i OneNote. Der kan du velge mellom <strong>"Ukeplan"</strong> eller <strong>"Prøveplan"</strong> i menyen til venstre.</p>
+                    <p>Klikk under for å åpne fellesområdet. Velg mellom <strong>"Ukeplan"</strong> eller <strong>"Prøveplan"</strong> i menyen til venstre.</p>
                     <a href="https://vestfold.sharepoint.com/:f:/s/Section_13fa9d3e-bd3e-4c47-b5e3-1fe9ef9965e9/IgAhVF7atUFHRZbg5eYcHTJMAXfa_JViUWRXqKFH9fMozGs" 
                        target="_blank" rel="noreferrer" class="btn-main">Åpne planer ↗</a>
                 </div>
