--- a/index.html
+++ b/index.html
@@ -25,27 +25,17 @@
     <main class="main-content">
         <section id="oversikt" class="tab-content">
             <div class="content-header">
-                <h1>Uke- og Prøveplan 8C</h1>
-                <p class="subtitle">Her finner du oversiktene for skoleåret 25/26.</p>
+                <h1>Velkommen til 8C</h1>
+                <p class="subtitle">Her finner du alle oversikter for skoleåret 25/26.</p>
             </div>
             
             <div class="action-card">
                 <div class="calendar-icon"><div class="cal-top"></div><div class="cal-body">8C</div></div>
                 <div class="card-content">
-                    <h2>Digital Ukeplan</h2>
-                    <p>Åpner fellesområdet. Velg fanen for gjeldende uke i menyen til venstre.</p>
+                    <h2>Uke- og Prøveplan</h2>
+                    <p>Bruk menyen til venstre i OneNote for å bytte mellom de ulike planene.</p>
                     <a href="https://vestfold.sharepoint.com/:f:/s/Section_13fa9d3e-bd3e-4c47-b5e3-1fe9ef9965e9/IgAhVF7atUFHRZbg5eYcHTJMAXfa_JViUWRXqKFH9fMozGs" 
-                       target="_blank" rel="noreferrer" class="btn-main">Åpne Ukeplan ↗</a>
-                </div>
-            </div>
-
-            <div class="action-card" style="margin-top: 20px;">
-                <div class="calendar-icon"><div class="cal-top" style="background: #1e293b;"></div><div class="cal-body">📝</div></div>
-                <div class="card-content">
-                    <h2>Prøveplan</h2>
-                    <p>Åpner fellesområdet. Velg fanen <strong>"Prøveplan 8.trinn"</strong> i menyen til venstre.</p>
-                    <a href="https://vestfold.sharepoint.com/:f:/s/Section_13fa9d3e-bd3e-4c47-b5e3-1fe9ef9965e9/IgAhVF7atUFHRZbg5eYcHTJMAXfa_JViUWRXqKFH9fMozGs" 
-                       target="_blank" rel="noreferrer" class="btn-main" style="background: #1e293b;">Åpne Prøveplan ↗</a>
+                       target="_blank" rel="noreferrer" class="btn-main">Åpne planer ↗</a>
                 </div>
             </div>
         </section>
